2008-01-01  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.template: Create logs_dir if doesn't exist. New
	parameters --config, --ctl-config, --logs, --spool. Crash dump
	renamed to erl_crash_DATETIME.dump.
	
	* src/ejabberdctl.template: Backport improvements from binary
	installer (EJAB-488): options are simple values; enable Kernel
	Poll by default, set SMP to auto, set max ports to 32000, max
	processes to 250000.
	* src/ejabberdctl.cfg.example: Likewise

	* src/ejabberd.inetrc: Renamed ejabberd.inetrc to inetrc
	* src/inetrc: Likewise
	* src/Makefile.in: Likewise
	* doc/guide.tex: Likewise

2007-12-31  Badlop  <badlop@process-one.net>
	
	* src/msgs/ca.msg: Updated (thanks to Vicent Alberola Canet)

2007-12-29  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_s2s_out.erl: Fixed behavior when outgoing_s2s_port
	option is not defined (EJAB-487)

2007-12-27  Badlop  <badlop@process-one.net>

	* src/mod_vcard_ldap.erl: Fix some field names (EJAB-483)

2007-12-26  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Translate menu items of webadmin
	hooks in each module (EJAB-485)
	* src/mod_shared_roster.erl: Likewise

	* src/web/ejabberd_web_admin.erl: max_user_sessions access rule
	contains an integer, but webadmin always expects atoms (EJAB-482)

2007-12-25  Badlop  <badlop@process-one.net>

	* src/mod_configure.erl: Bugfix, update to match changes in
	mod_announce SVN r1099

2007-12-24  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: remove useless get_roster_info call in
	presence_probe handling when access rule is presence

2007-12-24  Mickael Remond  <mremond@process-one.net>

	* doc/release_notes_2.0.0.txt: ejabberd 2.0.0 beta 1 release
	notes.

2007-12-23  Badlop  <badlop@process-one.net>

	* src/msgs/vi.msg: New Vietnamese translation (thanks to EQHO
	Communications)

	* src/msgs/th.msg: New Thai translation (thanks to EQHO
	Communications)
